Main and Footer complete

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                     <div class="call">
-                        <button class="button jumbo">Scarica per Mac</button>
+                        <button class="button jumbo">&#8595;
+                            Scarica per Mac</button>
                         <button class="button jumbo two">Apri Discord nel tuo browser</button>
                     </div>
 
@@ -54,7 +55,7 @@
     <!-- Main -->
     <main>
         <!-- Box main Uno -->
-        <div class="box-main">
+        <section class="box-main">
             <div class="container">
                 <div class="box-row">
                     <div class="row-one">
@@ -68,9 +69,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Box Main Due -->
-        <div class="box-main" id="grey">
+        <section class="box-main" id="grey">
             <div class="container">
                 <div class="box-row">
                     <div class="row-one" id="order">
@@ -85,9 +86,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <!-- Box Main Tre -->
-        <div class="box-main">
+        <section class="box-main">
             <div class="container">
                 <div class="box-row">
                     <div class="row-one" id="order-tre">
@@ -101,29 +102,94 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </section>
+    
+    <!-- Wawe -->
+     <!--  <div class="onda">
+        <img src="img/wave.svg" alt="wave">
+    </div> -->
+    
     <!-- Main Big -->
-    <div class="box-big">
+    <section class="box-big">
         <div class="container">
             <div class="big">
-
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <div class="big-img">
+                    <img src="img/item4-big.svg" alt="immagine grande">
+                </div>
+                <div class="big-action">
+                    <h3>Pronto ad iniziare la tua avventura?</h3>
+                </div>
+                <button class="download"><a href="">&#8595;
+                    Scarica per iniziare</a></button>
             </div>
         </div>
-    </div>
+    </section>
     <!-- /Main -->
-
+    </main> 
     <!-- Footer -->
     <footer>
         <!-- Footer Top -->
         <div class="footer-top">
             <div class="container">
                 <div class="box-footer">
-                    <div class="row-social"></div>
-                    <div class="row-small"></div>
-                    <div class="row-small"></div>
-                    <div class="row-small"></div>
-                    <div class="row-small"></div>
+                    <div class="row-social">
+                        <h3>Il tuo posto per parlare</h3>
+                        <img src="img/ita.png" alt="italia">
+                        <span>Italiano &#8744;</span>
+                        <div class="social">
+                            <i class="fa-brands fa-twitter mr"></i>
+                            <i class="fa-brands fa-instagram mr"></i>
+                            <i class="fa-brands fa-square-facebook mr"></i>
+                            <i class="fa-brands fa-youtube "></i>
+                        </div>
+                    </div>
+                    <div class="row-small">
+                        <ul>
+                            <h3>Prodotto</h3>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="row-small">
+                        <ul>
+                            <h3>Compagnia</h3>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="row-small">
+                        <ul>
+                            <h3>Risorse</h3>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
+                    <div class="row-small">
+                        <ul>
+                            <h3>Norme</h3>
+                            <li>Scarica</li>
+                            <li>Perché Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </div>
 
                 </div>
             </div>
@@ -132,8 +198,12 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="menu-bottom">
-                    <div class="logo-bottom pink padding-footer">Logo</div>
-                    <div class="button pink padding-footer">Bottone</div>
+                    <div class="logo-bottom padding-footer">
+                        <img src="img/logo.svg" alt="logo footer">
+                    </div>
+                    <div class="button-footer padding-footer">
+                        <a href="">Registrati</a>
+                    </div>
                 </div>
             </div>
         </div>
